; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_apds990x.c_apds990x_chip_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_apds990x.c_apds990x_chip_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apds990x_chip = type { i32 }

@APDS990X_ENABLE = common dso_local global i32 0, align 4
@APDS990X_EN_DISABLE_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.apds990x_chip*)* @apds990x_chip_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apds990x_chip_off(%struct.apds990x_chip* %0) #0 {
  %2 = alloca %struct.apds990x_chip*, align 8
  store %struct.apds990x_chip* %0, %struct.apds990x_chip** %2, align 8
  %3 = load %struct.apds990x_chip*, %struct.apds990x_chip** %2, align 8
  %4 = load i32, i32* @APDS990X_ENABLE, align 4
  %5 = load i32, i32* @APDS990X_EN_DISABLE_ALL, align 4
  %6 = call i32 @apds990x_write_byte(%struct.apds990x_chip* %3, i32 %4, i32 %5)
  %7 = load %struct.apds990x_chip*, %struct.apds990x_chip** %2, align 8
  %8 = getelementptr inbounds %struct.apds990x_chip, %struct.apds990x_chip* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ARRAY_SIZE(i32 %9)
  %11 = load %struct.apds990x_chip*, %struct.apds990x_chip** %2, align 8
  %12 = getelementptr inbounds %struct.apds990x_chip, %struct.apds990x_chip* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @regulator_bulk_disable(i32 %10, i32 %13)
  ret i32 0
}

declare dso_local i32 @apds990x_write_byte(%struct.apds990x_chip*, i32, i32) #1

declare dso_local i32 @regulator_bulk_disable(i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
